syntax = "proto3";

package user;

option go_package = "userpb";

message User {
    int32 id = 1;
    string fname = 2;
    string city = 3;
    int64 phone = 4;
    float height = 5;
    bool married = 6;
}

message UserRequest {
    int32 id = 1;
}

message UserResponse {
    User user = 1;
}

message UsersRequest {
    repeated int32 ids = 1;
}

message UsersResponse {
    repeated User users = 1;
}

service UserService {
    rpc UserById(UserRequest) returns (UserResponse) {};
    rpc UserByListId(UsersRequest) returns (UsersResponse) {};
}